--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -43,3 +43,6 @@
 <div *ngIf="verSolicitudes">
   <app-ver-solicitudes></app-ver-solicitudes>
 </div>
+<div *ngIf="solicitud">
+  <app-crear-solicitud></app-crear-solicitud>
+</div>
